@@ -1844,7 +1844,7 @@ extern "C"
         strcpy(desc->params[i].name, "channels");
         desc->params[i].character = 'c';
         desc->params[i].type = JackDriverParamInt;
-        desc->params[i].value.ui = -1;
+        desc->params[i].value.i = -1;
         strcpy(desc->params[i].short_desc, "Maximum number of channels");
         strcpy(desc->params[i].long_desc, "Maximum number of channels. If -1, max possible number of channels will be used");
 
@@ -1852,7 +1852,7 @@ extern "C"
         strcpy(desc->params[i].name, "inchannels");
         desc->params[i].character = 'i';
         desc->params[i].type = JackDriverParamInt;
-        desc->params[i].value.ui = -1;
+        desc->params[i].value.i = -1;
         strcpy(desc->params[i].short_desc, "Maximum number of input channels");
         strcpy(desc->params[i].long_desc, "Maximum number of input channels. If -1, max possible number of input channels will be used");
 
@@ -1860,7 +1860,7 @@ extern "C"
         strcpy(desc->params[i].name, "outchannels");
         desc->params[i].character = 'o';
         desc->params[i].type = JackDriverParamInt;
-        desc->params[i].value.ui = -1;
+        desc->params[i].value.i = -1;
         strcpy(desc->params[i].short_desc, "Maximum number of output channels");
         strcpy(desc->params[i].long_desc, "Maximum number of output channels. If -1, max possible number of output channels will be used");
 
@@ -1921,7 +1921,7 @@ extern "C"
         strcpy(desc->params[i].name, "input-latency");
         desc->params[i].character = 'I';
         desc->params[i].type = JackDriverParamUInt;
-        desc->params[i].value.i = 0;
+        desc->params[i].value.ui = 0;
         strcpy(desc->params[i].short_desc, "Extra input latency (frames)");
         strcpy(desc->params[i].long_desc, desc->params[i].short_desc);
 
@@ -1929,7 +1929,7 @@ extern "C"
         strcpy(desc->params[i].name, "output-latency");
         desc->params[i].character = 'O';
         desc->params[i].type = JackDriverParamUInt;
-        desc->params[i].value.i = 0;
+        desc->params[i].value.ui = 0;
         strcpy(desc->params[i].short_desc, "Extra output latency (frames)");
         strcpy(desc->params[i].long_desc, desc->params[i].short_desc);
 
@@ -1953,7 +1953,7 @@ extern "C"
         strcpy(desc->params[i].name, "async-latency");
         desc->params[i].character = 'L';
         desc->params[i].type = JackDriverParamUInt;
-        desc->params[i].value.i = 100;
+        desc->params[i].value.ui = 100;
         strcpy(desc->params[i].short_desc, "Extra output latency in asynchronous mode (percent)");
         strcpy(desc->params[i].long_desc, desc->params[i].short_desc);
 
@@ -1961,7 +1961,7 @@ extern "C"
         strcpy(desc->params[i].name, "grain");
         desc->params[i].character = 'G';
         desc->params[i].type = JackDriverParamUInt;
-        desc->params[i].value.i = 100;
+        desc->params[i].value.ui = 100;
         strcpy(desc->params[i].short_desc, "Computation grain in RT thread (percent)");
         strcpy(desc->params[i].long_desc, desc->params[i].short_desc);
 
