@@ -253,7 +253,7 @@ extern "C"
         i = 0;
         strcpy(desc->params[i].name, "channels");
         desc->params[i].character = 'c';
-        desc->params[i].type = JackDriverParamInt;
+        desc->params[i].type = JackDriverParamUInt;
         desc->params[i].value.ui = 0;
         strcpy(desc->params[i].short_desc, "Maximum number of channels");
         strcpy(desc->params[i].long_desc, desc->params[i].short_desc);
@@ -261,7 +261,7 @@ extern "C"
         i++;
         strcpy(desc->params[i].name, "inchannels");
         desc->params[i].character = 'i';
-        desc->params[i].type = JackDriverParamInt;
+        desc->params[i].type = JackDriverParamUInt;
         desc->params[i].value.ui = 0;
         strcpy(desc->params[i].short_desc, "Maximum number of input channels");
         strcpy(desc->params[i].long_desc, desc->params[i].short_desc);
@@ -269,7 +269,7 @@ extern "C"
         i++;
         strcpy(desc->params[i].name, "outchannels");
         desc->params[i].character = 'o';
-        desc->params[i].type = JackDriverParamInt;
+        desc->params[i].type = JackDriverParamUInt;
         desc->params[i].value.ui = 0;
         strcpy(desc->params[i].short_desc, "Maximum number of output channels");
         strcpy(desc->params[i].long_desc, desc->params[i].short_desc);
@@ -334,7 +334,7 @@ extern "C"
         strcpy(desc->params[i].name, "input-latency");
         desc->params[i].character = 'I';
         desc->params[i].type = JackDriverParamUInt;
-        desc->params[i].value.i = 0;
+        desc->params[i].value.ui = 0;
         strcpy(desc->params[i].short_desc, "Extra input latency");
         strcpy(desc->params[i].long_desc, desc->params[i].short_desc);
 
@@ -342,7 +342,7 @@ extern "C"
         strcpy(desc->params[i].name, "output-latency");
         desc->params[i].character = 'O';
         desc->params[i].type = JackDriverParamUInt;
-        desc->params[i].value.i = 0;
+        desc->params[i].value.ui = 0;
         strcpy(desc->params[i].short_desc, "Extra output latency");
         strcpy(desc->params[i].long_desc, desc->params[i].short_desc);
 
